Fix scroll overflow

--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -1,5 +1,9 @@
 .form {
   height: 70vh;
+}
+
+.inputs {
+  height: 90%;
   overflow-y: scroll;
   padding-right: 1rem;
 }
